# SettingsWidget-qt5

./: .gitignore  CMakeLists.txt  README.md
include/: settingitems.h  settingspanel.h  settingswidget.h
settingswidget_demo/: CMakeLists.txt  example.json  main.cpp
src/: settingitems.cpp  settingspanel.cpp  settingswidget.cpp
